# serverless-web-crawler-workshop

./: README.md  create_lambda_package.sh  pyproject.toml  requirements.txt  schema.sql
src/: exceptions.py  lambda_function.py
src/config/: database.py
src/repositories/: __init__.py  base_repository.py  crawler_executions_repository.py  question_tags_repository.py  questions_repository.py  tags_repository.py
